# api/routes/users.js
@@ -3,6 +3,36 @@ const router = express.Router();
 const { createUser } = require('../controllers');
 const { getClients } = require('../controllers');
 const { getMasters } = require('../controllers');
+const { updateUserFields } = require('../controllers');
+const { deleteUser } = require('../controllers');
+
+const multer = require('multer');
+const storage = multer.diskStorage({
+  destination: (req, file, cb) => {
+    cb(null, 'public/images/uploads')
+  },
+  filename: (req, file, cb) => {
+    cb(null, Date.now() + '-' + file.originalname)
+  }
+});
+
+const fileFilter = (req, file, cb) => {
+    if(file.mimetype === 'image/jpeg' || file.mimetype === 'image/png') {
+      cb(null, true);
+    } else {
+      cb(null, false);
+    }
+}
+
+const upload = multer({
+  storage: storage,
+  fileFilter: fileFilter
+});
+
+// const cpUpload = upload.fields([
+//   { cover: 'cover', maxCount: 1 },
+//   { portfolio: 'portfolio', maxCount: 300 }
+// ]);
 
 router.get('/', (req, res) => {
   res.send('Nail Service v.1.0');
@@ -16,8 +46,12 @@ router.get('/masters', (req, res, next) => {
   getMasters(req, res, next);
 });
 
-router.get('/:id', (req, res) => {
-  console.log('One user');
+router.put('/:id', upload.single('cover'), (req, res, next) => {
+  updateUserFields(req, res, next);
+});
+
+router.delete('/:id', (req, res, next) => {
+  deleteUser(req, res, next);
 });
 
 router.get('/:id/testimonials', (req, res) => {
